# captchasolver

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  train_model.ipynb
captchasolver/: captchasolver.py  constants.py  dataset_creator.py  decoder.py
captchasolver_model/: fingerprint.pb  keras_metadata.pb  saved_model.pb
captchasolver_model/variables/: variables.data-00000-of-00001  variables.index
src/captchasolver/: __init__.py  captchasolver.py  image_processor.py
tests/: test_captchasolver.py  utils.py
