[tool.poetry]
name = "captchasolver"
version = "0.1.0"
description = "A simple CAPTCHA solver utility package."
authors = ["wuihee <wuihee@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
tensorflow-io = "0.31.0"
tensorflow = "2.12.0"
opencv-python = "^4.9.0.80"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
